# mewtax

./: .bumpversion.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-ci.yml
src/mewtax/: __init__.py  mewtax.py
tests/: test_mewtax.py
